# document-embedding

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/document_embedding/: average.py  base.py  pert.py  sentences.py
tests/: test_embeddings.py
